app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
$fa-font-path:  "../bower_components/font-awesome/fonts";
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
@import "font-awesome/scss/font-awesome.scss";
// endbower

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;

  .btn {
    font-size: 21px;
    padding: 14px 24px;
  }
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;

  p + h4 {
    margin-top: 28px;
  }
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

// DiscussionTool styles
$dt-orange_dk: 	#d79634;
$dt-orange:		  #f6a551;
$dt-orange_lt:	#fbd3a9;
$dt-orange_xlt:	#fef3e9;
$dt-green_dk:		#2b4d23;
$dt-green:			#5ba74a;
$dt-green_lt:		#bedeb6;
$dt-green_xlt:	#e9f4e7;
$dt-blue_dk:		#225569;
$dt-blue:			  #48a2c5;
$dt-blue_lt:		#c9e3ee;
$dt-grey_dk:		#222;
$dt-grey:			  #555;
$dt-grey_lt:		#999;
$dt-grey_xlt:		#eee;
$dt-white:			#fff;

.media.dt-discussion-item, .media.dt-discussion-entry {
  .media-left {
    text-align: center;
  }

  .dt-date-time {
    color: $dt-grey-lt;
    font-size: 90%;
  }

  .badge {
    padding: 6px 10px;
    margin-right: 5px;
    background-color: $dt-orange_dk;
  }

  .glyphicon-user {
    font-size: 64px;
  }

  .dt-like-dislike {
    text-align: center;

    .dt-like, .dt-dislike {
      display: inline-block;

      span {
        display: block;
      }

      a {
        margin-left: 10px;
        margin-right: 10px;
        display: inline-block;
      }

      a:hover {
        text-decoration: none;
        color: $gray-lighter;
      }
    }

    .dt-like {
      a {
        color: $brand-success;
      }
    }

    .dt-dislike {
      a {
        color: $brand-danger;
      }
    }

    .glyphicon {
      font-size: 24px;
    }
  }

  .list-group {
    .list-group-item {
      .btn-link:focus {
        outline: none;
      }
      .fa {
        margin-right: 7px;
      }
    }
  }
}

ul.dt-contained-list {
  margin-bottom: 0;
}

img.dt-navbar-logo {
  width: 32px;
  height: 32px;
  display: inline-block;
  margin-right: 5px;
}

.dt-create-discussion {
  .list-group {
    .glyphicon, .fa {
      margin-right: 5px;
    }
  }
}

.dt-tag-cloud {
  .btn {
    margin: 0;
    padding: 0;
  }
  .badge {
    padding: 4px 8px;
    background-color: $dt-orange_dk;
    margin: 2px;
  }
}

.dt-ld-logo {
  width: 25px;
  height: 25px;
}

.dt-living-documents {
  i.fa {
    font-size: 25px;
  }
}

.dt-contained-list {

  .btn-link {
    margin: 0;
    padding: 0;
    text-align: left;

    span {
      white-space: normal;;
    }
  }
}

.dt-ajax-loader {
  text-align: center;
  i {
    font-size: 500%;
  }
}

.navbar {
  .dt-btn-bnp {
    color: #fff;
    background-color: $dt-orange;
    border-color: $dt-orange-dk;
  }
  .dt-btn-bnp:hover {
    background-color: $dt-orange-dk;
  }
}

.dt-living-document {
  input[type="radio"] {
    display: none;
  }
  label {
    margin-left: 27px;
  }
  i.fa {
    font-size: 150%;
    color: $dt-blue;
  }
}

.dt-entity-icon {
  width: 32px;
  height: 40px;
}

.dt-bnp-circle {
  i.fa {
    font-size: 36px;
  }
  span {
    margin-top: 10px;
    display: inline-block;
    vertical-align: middle;
  }
}

.dt-system-messages {
  position: fixed;
  top: 0px;
  right: 0;
  left: 0;
  z-index: 999;
}

/* andular-tabs fix */
.nav, .pagination, .carousel, .panel-title a { cursor: pointer; }

